%%{init: {'theme': 'neutral'}}%%
classDiagram
    class Usuario {
        +int us_id
        +string us_nome
        +string us_email
        +int us_pontos_total
        +string us_tipo
    }

    class Disciplina {
        +int di_id
        +string di_disciplina
        +string di_cor
        +int di_usuario_id
    }

    class Meta {
        +int me_id
        +int me_usuario_id
        +int me_disciplina
        +int me_tempo_min
        +string me_tipo
        +date me_data_inicio
    }

    class Atividade {
        +int at_id
        +int at_usuario_id
        +int at_disciplina
        +int at_tempo_min
        +int at_tarefas_concluidas
        +date at_data
        +string at_descricao
    }

    class Conquista {
        +int co_id
        +string co_codigo
        +string co_titulo
        +string co_criterio_tipo
        +int co_criterio_valor
    }

    class UsuarioConquista {
        +int uc_id
        +int uc_usuario_id
        +int uc_conquista_id
        +timestamp uc_desbloqueado_em
    }

    class NotificacaoConfig {
        +int nc_id
        +int nc_usuario_id
        +boolean nc_ativo
        +time nc_horario
        +string nc_fuso_horario
    }

    class Tarefa {
        +int ta_id
        +string ta_titulo
        +string ta_status
        +date ta_prazo
        +int ta_usuario_id
        +int ta_disciplina_id
        +boolean ta_concluida
    }

    class TarefaHistorico {
        +int th_id
        +int th_tarefa_id
        +int th_usuario_id
        +string th_acao
        +string th_titulo_snapshot
    }

    class CronogramaEstudo {
        +int cr_id
        +int cr_usuario_id
        +int cr_disciplina
        +date cr_data
        +time cr_horario_inicio
        +int cr_duracao_min
    }

    class SessaoEstudo {
        +int se_id
        +int se_usuario_id
        +int se_disciplina
        +string se_status
        +timestamp se_inicio
        +int se_segundos_focados
    }

    class Turma {
        +int tu_id
        +string tu_nome
        +string tu_codigo
        +int tu_professor_id
        +boolean tu_ativa
    }

    class TurmaAluno {
        +int ta_id
        +int ta_turma_id
        +int ta_aluno_id
        +timestamp ta_entrou_em
    }

    class ConquistasService {
        +desbloquearConquistasElegiveis(usuarioId)
        +listarConquistasComStatus(usuarioId)
    }

    class NotificacoesService {
        +enviarLembretes()
    }

    Usuario "1" --> "*" Disciplina : cadastra
    Usuario "1" --> "*" Meta : possui
    Usuario "1" --> "*" Atividade : registra
    Usuario "1" --> "*" UsuarioConquista : possui
    Usuario "1" --> "0..1" NotificacaoConfig : configura
    Usuario "1" --> "*" Tarefa : gerencia
    Usuario "1" --> "*" CronogramaEstudo : agenda
    Usuario "1" --> "*" SessaoEstudo : inicia
    Usuario "1" --> "*" Turma : cria
    Usuario "1" --> "*" TurmaAluno : participa
    Disciplina "1" --> "*" Meta : organiza
    Disciplina "1" --> "*" Atividade : recebe
    Disciplina "1" --> "*" Tarefa : classifica
    Disciplina "1" --> "*" CronogramaEstudo : compoe
    Disciplina "1" --> "*" SessaoEstudo : foca
    Conquista "1" --> "*" UsuarioConquista : referencia
    Tarefa "1" --> "*" TarefaHistorico : gera
    Turma "1" --> "*" TurmaAluno : possui
    Atividade --> ConquistasService : dispara
    SessaoEstudo --> Atividade : gera
    SessaoEstudo --> ConquistasService : avalia
